--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -431,5 +431,7 @@
   "getUserToken":"Get user logged Token",
   "getUserTokenDesc":"Function that get an user logged token (X-AUTH-TOKEN)",
   "getFirebaseNotificationData":"Get Push Notification Data",
-  "getFirebaseNotificationDataDesc":"Function that get push notification data"
+  "getFirebaseNotificationDataDesc":"Function that get push notification data",
+  "changeContent":"Change content",
+  "changeContentDesc":"Function that change the content, i.e: label"
 }
