--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -416,9 +416,9 @@
   "serializeObject": "Serializar Objeto",
   "serializeObjectDescription": "Função que serializa um objeto. Exemplo: {cronapp:'100%'} retorna \"{\"cronapp\":\"100%\"}\"",
   "setSessionStorage": "Adicionar Item na Sessão da Aba",
-  "setSessionStorageDesc": "Função que adiciona um item na sessão local do navagedor. Esse Item é limpo ao fechar o navegador e é visísvel apenas na aba em que for criado",
+  "setSessionStorageDesc": "Função que adiciona um item na sessão local do navagedor. Esse Item é limpo ao fechar o navegador e é visível apenas na aba em que for criado",
   "getSessionStorage": "Obter Item da Sessão da Aba",
-  "getSessionStorageDesc": "Função que obtém um item da sessão da aba. Esse Item é limpo ao fechar o navegador e é visísvel apenas na aba em que for criado",
+  "getSessionStorageDesc": "Função que obtém um item da sessão da aba. Esse Item é limpo ao fechar o navegador e é visível apenas na aba em que for criado",
   "setLocalStorage": "Adicionar Item na Sessão do navegador",
   "setLocalStorageDesc": "Função que adiciona um item na sessão global do navegador. Esse item é mantido ao fechar o navegador e é visível em todas as abas",
   "getLocalStorage": "Obter Item da Sessão do navegador",
