--- a/src/main/java/cronapi/i18n/Messages_en_US.properties
+++ b/src/main/java/cronapi/i18n/Messages_en_US.properties
@@ -60,6 +60,12 @@ XMLOpenFromFileName=Builted from a file
 
 XMLOpenFromFileParam0=XML File path: Absolute file path to build xml 
 
+XMLOpenFromString=Create XML from text
+
+XMLOpenFromStringDescription=Function that create a XML from a text
+
+XMLOpenFromStringParam0= Text
+
 XMLOpenName=Build a new XML
 
 XMLOpenParam0=XML Name: Name to create the xml
