Converter texto xml para json

--- a/src/main/java/cronapi/i18n/Messages_en_US.properties
+++ b/src/main/java/cronapi/i18n/Messages_en_US.properties
@@ -66,6 +66,10 @@ XMLOpenFromStringDescription=Function that create a XML from a text
 
 XMLOpenFromStringParam0= Text
 
+XMLToJSON=Convert XML to JSON
+
+XMLToJSONDescription=Function that convert a xml string into JSON object
+
 XMLOpenName=Build a new XML
 
 XMLOpenParam0=XML Name: Name to create the xml
