Creating social category

--- a/src/main/java/cronapi/i18n/Messages_en_US.properties
+++ b/src/main/java/cronapi/i18n/Messages_en_US.properties
@@ -964,6 +964,7 @@ CategoryType.DATABASE=Database
 CategoryType.FRONTEND=Frontend
 CategoryType.CONVERSION=Conversion
 CategoryType.CHART=Chart
+CategoryType.SOCIAL=Social
 CategoryType.DATETIME=Datetime
 CategoryType.XML=XML
 CategoryType.EMAIL=Email
