[QAIBT-1379] - Ajuste nas funções e flush dentro de insert

--- a/src/main/java/cronapi/i18n/Messages_en_US.properties
+++ b/src/main/java/cronapi/i18n/Messages_en_US.properties
@@ -1278,9 +1278,11 @@ getParam=Get param from request
 getParamDescription=Function to get param from request
 applicationClassesFolder=Application classes folder
 applicationClassesFolderDescription=Function to return the path of the application classes folder.
-commitEntity=Commit Entity
-commitEntityDescription=Function to commit entity datasource.
-rollbackEntity=Rollback Entity
-rollbackEntityDescription=Function to rollback entity datasource.
-flushEntity=Flush Entity
-flushEntityDescription=Function to flush entity datasource.
+commitTransaction=Commit Transaction
+commitTransactionDescription=Function to commit transaction.
+rollbackTransaction=Rollback Transaction
+rollbackTransactionDescription=Function to rollback transaction.
+flushTransaction=Flush Transaction
+flushTransactionDescription=Function to flush transaction.
+beginTransaction=Begin Transaction
+beginTransactionDescription=Function to begin transaction.
