--- a/src/main/java/cronapi/i18n/Messages_en_US.properties
+++ b/src/main/java/cronapi/i18n/Messages_en_US.properties
@@ -1287,3 +1287,5 @@ flushTransaction=Flush Transaction
 flushTransactionDescription=Function to flush transaction.
 beginTransaction=Begin Transaction
 beginTransactionDescription=Function to begin transaction.
+convertLongToDate=Convert milliseconds to date
+convertLongToDateDescription=Function that convert a milliseconds(Long) to date
