--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -88,7 +88,7 @@
   "CategoryType.SCREEN": "Formulário",
   "CategoryType.DATETIME": "Data e hora",
   "CategoryType.XML": "Xml",
-  "getValueOfField": "Obter valor do",
+  "getValueOfField": "Obter valor do Campo",
   "functionToGetValueOfField": "Função para obter valor do campo",
   "fieldNameFromScreen": "Obter nome do campo",
   "functionToGetFieldNameFromScreen": "Função para obter nome do campo (É necessário associar o bloco ao formulário)",
@@ -461,5 +461,6 @@
   "loadMoreNameDescription":"Função que chama a próxima página de registros do datasource",
   "hasNextPageName":"Existem mais registros?",
   "hasNextPageDescription":"Função que retorna se existem mais itens a serem carregados pela fonte de dados",
-  "compile": "Compilar?"
+  "compile": "Compilar?",
+  "global": "Global"
 }
