[QAIBT-1517] - Obter campo servidor e cliente sempre por recursão no pai

--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -461,6 +461,5 @@
   "loadMoreNameDescription":"Função que chama a próxima página de registros do datasource",
   "hasNextPageName":"Existem mais registros?",
   "hasNextPageDescription":"Função que retorna se existem mais itens a serem carregados pela fonte de dados",
-  "compile": "Compilar?",
-  "global": "Global"
+  "compile": "Compilar?"
 }
