--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -428,12 +428,12 @@
   "getFirebaseToken": "Get Firebase Token",
   "getFirebaseTokenDescription": "Function that return a firease token for send push notifications",
   "dbName": "Database Name",
-  "getUserToken":"Get user logged Token",
-  "getUserTokenDesc":"Function that get an user logged token (X-AUTH-TOKEN)",
-  "getFirebaseNotificationData":"Get Push Notification Data",
-  "getFirebaseNotificationDataDesc":"Function that get push notification data",
-  "changeContent":"Change content",
-  "changeContentDesc":"Function that change the content, i.e: label",
+  "getUserToken": "Get user logged Token",
+  "getUserTokenDesc": "Function that get an user logged token (X-AUTH-TOKEN)",
+  "getFirebaseNotificationData": "Get Push Notification Data",
+  "getFirebaseNotificationDataDesc": "Function that get push notification data",
+  "changeContent": "Change content",
+  "changeContentDesc": "Function that change the content, i.e: label",
   "firstRecordName": "Go to First Record",
   "firstRecordDescription": "Function that points to the first datasource cursor",
   "firstRecordParam0": "Datasource",
@@ -450,15 +450,14 @@
   "json": "Json",
   "CategoryType.JSON": "Json",
   "CategoryType.SOCIAL": "Social",
-  "sociaLoginDescription":"Function that login with selected social network",
-  "socialNetwork":"Social Network",
-  "socialLogin":"Login",
+  "sociaLoginDescription": "Function that login with selected social network",
+  "socialNetwork": "Social Network",
+  "socialLogin": "Login",
   "getSelectedRowsGrid": "Get Selected Rows from Grid",
   "functionToGetSelectedRowsGrid": "Function to get selected rows from a grid",
-  "loadMoreName":"Load more itens",
-  "loadMoreNameDescription":"Function that invokes the next page from the selected datasource",
-  "hasNextPageName":"Has next page?",
-  "hasNextPageDescription":"Function that returns if exists a next page on selected datasource",
-  "compile": "Compile?",
-  "global": "Global"
+  "loadMoreName": "Load more itens",
+  "loadMoreNameDescription": "Function that invokes the next page from the selected datasource",
+  "hasNextPageName": "Has next page?",
+  "hasNextPageDescription": "Function that returns if exists a next page on selected datasource",
+  "compile": "Compile?"
 }
