Funções de Obter Parâmetro do Sistema e Perfil do Sistema

--- a/src/main/java/cronapi/i18n/Messages_en_US.properties
+++ b/src/main/java/cronapi/i18n/Messages_en_US.properties
@@ -1289,3 +1289,6 @@ beginTransaction=Begin Transaction
 beginTransactionDescription=Function to begin transaction.
 convertLongToDate=Convert milliseconds to date
 convertLongToDateDescription=Function that convert a milliseconds(Long) to date
+getSystemParam=Get System Parameter
+getSystemParamKey=Parameter Key
+getSystemProfile=Get System Profile
