[QAIBT-1590] - Função para alterar data

--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -461,5 +461,8 @@
   "loadMoreNameDescription":"Função que chama a próxima página de registros do datasource",
   "hasNextPageName":"Existem mais registros?",
   "hasNextPageDescription":"Função que retorna se existem mais itens a serem carregados pela fonte de dados",
-  "compile": "Compilar?"
+  "compile": "Compilar?",
+  "updateDate": "Alterar data",
+  "functionToUpdateDate": "Função para alterar data",
+  "millisecond": "millisegundo"
 }
