--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -459,5 +459,8 @@
   "loadMoreNameDescription": "Function that invokes the next page from the selected datasource",
   "hasNextPageName": "Has next page?",
   "hasNextPageDescription": "Function that returns if exists a next page on selected datasource",
-  "compile": "Compile?"
+  "compile": "Compile?",
+  "updateDate": "Update date",
+  "functionToUpdateDate": "Function to update an date",
+  "millisecond": "millisecond"
 }
