--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -462,5 +462,5 @@
   "compile": "Compile?",
   "updateDate": "Update date",
   "functionToUpdateDate": "Function to update an date",
-  "millisecond": "millisecond"
+  "millisecond": "Millisecond"
 }
