--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -464,5 +464,5 @@
   "compile": "Compilar?",
   "updateDate": "Alterar data",
   "functionToUpdateDate": "Função para alterar data",
-  "millisecond": "millisegundo"
+  "millisecond": "Millisegundo"
 }
