[QAIBT-1590] - Correção na tradução milisegundos

--- a/src/main/java/cronapi/i18n/Messages_en_US.properties
+++ b/src/main/java/cronapi/i18n/Messages_en_US.properties
@@ -1294,4 +1294,4 @@ getSystemParamKey=Parameter Key
 getSystemProfile=Get System Profile
 updateDate=Update date
 functionToUpdateDate=Function to update an date
-millisecond=millisecond
+millisecond=Millisecond
