--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -461,5 +461,7 @@
   "loadMoreNameDescription":"Função que chama a próxima página de registros do datasource",
   "hasNextPageName":"Existem mais registros?",
   "hasNextPageDescription":"Função que retorna se existem mais itens a serem carregados pela fonte de dados",
-  "compile": "Compilar?"
+  "compile": "Compilar?",
+  "socialLogin": "Login por Redes Sociais",
+  "socialLoginDescription": "Função que realiza o login por Redes Sociais(Facebook/Github|Google|Linkedin)"
 }
