[QAIBT-1519] - Limpar dados de cache ao sair da aplicação mobile

--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -462,5 +462,8 @@
   "compile": "Compile?",
   "updateDate": "Update date",
   "functionToUpdateDate": "Function to update an date",
-  "millisecond": "Millisecond"
+  "millisecond": "Millisecond",
+  "socialLogin": "Social Login",
+  "socialLoginDescription": "Function to login with social media(Facebook/Github|Google|Linkedin)",
+  "clearCacheBeforeOpen": "Clean Login Data on Logoff"
 }
