QAIBT-1956 - Melhorar doc da função chamar bloco assíncrono

--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -465,5 +465,7 @@
   "millisecond": "Millisecond",
   "socialLogin": "Social Login",
   "socialLoginDescription": "Function to login with social media(Facebook/Github|Google|Linkedin)",
-  "clearCacheBeforeOpen": "Clean Login Data on Logoff"
+  "clearCacheBeforeOpen": "Clean Login Data on Logoff",
+  "classNameWithMethod": "Name of block function to be called",
+  "callbackFinish": "Function to be executed when execution is finished"
 }
