[QAIBT-2062] - Função de retornar nova linha

--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -467,5 +467,7 @@
   "socialLoginDescription": "Function to login with social media(Facebook/Github|Google|Linkedin)",
   "clearCacheBeforeOpen": "Clean Login Data on Logoff",
   "classNameWithMethod": "Name of block function to be called",
-  "callbackFinish": "Function to be executed when execution is finished"
+  "callbackFinish": "Function to be executed when execution is finished",
+  "newline": "Newline",
+  "newlineDescription": "Function that returns a newline '\\n'"
 }
