--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -469,5 +469,7 @@
   "socialLoginDescription": "Função que realiza o login por Redes Sociais(Facebook/Github|Google|Linkedin)",
   "clearCacheBeforeOpen": "Limpar Dados de Login ao Sair",
   "classNameWithMethod": "Nome da função do bloco que deverá ser chamada",
-  "callbackFinish": "Função que deverá ser executada, quando finalizar a execução"
+  "callbackFinish": "Função que deverá ser executada, quando finalizar a execução",
+  "newline": "Nova linha",
+  "newlineDescription": "Função que retorna uma nova linha '\\n'"
 }
