--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -469,5 +469,7 @@
   "classNameWithMethod": "Name of block function to be called",
   "callbackFinish": "Function to be executed when execution is finished",
   "newline": "Newline",
-  "newlineDescription": "Function that returns a newline '\\n'"
+  "newlineDescription": "Function that returns a newline '\\n'",
+  "datasourceLoadName": "Load datasource",
+  "datasourceLoadDescription": "Function that loads the selected datasource"
 }
