--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -471,5 +471,7 @@
   "classNameWithMethod": "Nome da função do bloco que deverá ser chamada",
   "callbackFinish": "Função que deverá ser executada, quando finalizar a execução",
   "newline": "Nova linha",
-  "newlineDescription": "Função que retorna uma nova linha '\\n'"
+  "newlineDescription": "Função que retorna uma nova linha '\\n'",
+  "datasourceLoadName": "Carregar fonte de dados",
+  "datasourceLoadDescription": "Função que carrega a fonte de dados selecionada"
 }
