[QAIBR-2062] - Trabalhando no retorno de quebra de linha

--- a/src/main/java/cronapi/i18n/Messages_en_US.properties
+++ b/src/main/java/cronapi/i18n/Messages_en_US.properties
@@ -1295,3 +1295,5 @@ getSystemProfile=Get System Profile
 updateDate=Update date
 functionToUpdateDate=Function to update an date
 millisecond=Millisecond
+newline=Newline
+newlineDescription=Function that returns a newline '\\n'
