--- a/src/main/java/cronapi/i18n/Messages_pt_BR.properties
+++ b/src/main/java/cronapi/i18n/Messages_pt_BR.properties
@@ -1286,3 +1286,5 @@ getSystemProfile=Obter Perfil do Sistema
 updateDate=Alterar data
 functionToUpdateDate=Função para alterar data
 millisecond=Millisegundo
+newline=Nova linha
+newlineDescription=Função que retorna uma nova linha '\\n'
