[QAIBT-2075] :sparkles: Added option to Scheduler Execution Blockly in order to allow execution after scope being destroyed.

--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -469,5 +469,6 @@
   "classNameWithMethod": "Name of block function to be called",
   "callbackFinish": "Function to be executed when execution is finished",
   "newline": "Newline",
-  "newlineDescription": "Function that returns a newline '\\n'"
+  "newlineDescription": "Function that returns a newline '\\n'",
+  "stopExecutionAfterScopeDestroyLabel": "Stop execution after changing scope"
 }
