[QAIBT-2066] :sparkles:[Component-Blocky-XML] Convert JSON to XML

--- a/src/main/java/cronapi/i18n/Messages_en_US.properties
+++ b/src/main/java/cronapi/i18n/Messages_en_US.properties
@@ -1295,3 +1295,10 @@ getSystemProfile=Get System Profile
 updateDate=Update date
 functionToUpdateDate=Function to update an date
 millisecond=Millisecond
+
+JSONToXML=Convert JSON to XML
+JSONToXMLDescription=Function that convert a xml string into JSON object
+
+MATHTHEPOW=Function Pow
+MATHPOWDESCRIPTION=A number representing the given base taken to the power of the given exponent.
+MATHPOWBASE=Base
