--- a/src/main/java/cronapi/i18n/Messages_pt_BR.properties
+++ b/src/main/java/cronapi/i18n/Messages_pt_BR.properties
@@ -1286,3 +1286,11 @@ getSystemProfile=Obter Perfil do Sistema
 updateDate=Alterar data
 functionToUpdateDate=Função para alterar data
 millisecond=Millisegundo
+
+JSONToXML=Converte JSON para XML
+JSONToXMLDescription=Função que converte um texto json para objeto xml
+JSONTOXMLValueToBeRead=Valor a ser lido: Texto ou Arquivo (Retorno da função "Abrir arquivo para leitura")
+
+MATHTHEPOW=Função Potência
+MATHPOWDESCRIPTION=Função que retorna a base elevada ao expoente
+MATHPOWBASE=Base
