:bug: Corrigindo erro de merge que quebrou abertura de blocos

--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -470,6 +470,6 @@
   "newline": "Newline",
   "newlineDescription": "Function that returns a newline '\\n'",
   "datasourceLoadName": "Load datasource",
-  "datasourceLoadDescription": "Function that loads the selected datasource"
+  "datasourceLoadDescription": "Function that loads the selected datasource",
   "stopExecutionAfterScopeDestroyLabel": "Stop execution after changing scope"
 }
