:white_check_mark: Add Test.
[QAIBT-2067] :bug:[Component-Blocky-XML] Error Convert XML to JSON
[QAIBT-2066] :sparkles:[Component-Blocky-XML] Convert JSON to XML
[QAIBT-2082] :sparkles:[Component-Blocky-MATH] Active new function math pow
Corrections alter local testing

--- a/src/main/java/cronapi/i18n/Messages_en_US.properties
+++ b/src/main/java/cronapi/i18n/Messages_en_US.properties
@@ -70,7 +70,7 @@ XMLToJSON=Convert XML to JSON
 
 XMLToJSONDescription=Function that convert a xml string into JSON object
 
-XMLOpenName=Build a new XML
+XMLOpenName=Build a new URL
 
 XMLOpenParam0=XML Name: Name to create the xml
 
@@ -1192,7 +1192,7 @@ generateReportDescription=Function to generate report file in the desired folder
 report=Report
 path=Path
 uploadName=Upload
-uploadDescription="Functionthat upload files to server
+uploadDescription=Functionthat upload files to server
 uploadParam=Description: Upload window description
 uploadParam0=Filters: Allowed type files. Ex: image/*
 uploadParam1=Maximum size: File maximum size (bytes), defalut is 20MB. Example: 20MB
@@ -1298,7 +1298,9 @@ millisecond=Millisecond
 
 JSONToXML=Convert JSON to XML
 JSONToXMLDescription=Function that convert a xml string into JSON object
+JSONTOXMLValueToBeRead=Valor a ser lido: Texto ou Arquivo (Retorno da função "Abrir arquivo para leitura")
 
 MATHTHEPOW=Function Pow
 MATHPOWDESCRIPTION=A number representing the given base taken to the power of the given exponent.
 MATHPOWBASE=Base
+MATHPOWEXPONENT=Exponent
