--- a/src/main/java/cronapi/i18n/Messages_pt_BR.properties
+++ b/src/main/java/cronapi/i18n/Messages_pt_BR.properties
@@ -1184,7 +1184,7 @@ generateReportDescription=Função para gerar arquivo do relatório na pasta des
 report=Relatório
 path=Caminho
 uploadName=Upload de arquivo
-uploadDescription="Função que envia arquivos para o servidor
+uploadDescription=Função que envia arquivos para o servidor
 uploadParam=Descrição: Descrição da janela de envio
 uploadParam0=Filtros: Tipos de arquivos permitidos Ex: image/*.
 uploadParam1=Tamanho máximo: Tamanho máximo permitido no arquivo em bytes, o valor padrão é 20MB. Exemplo: 20MB
@@ -1294,3 +1294,4 @@ JSONTOXMLValueToBeRead=Valor a ser lido: Texto ou Arquivo (Retorno da função "
 MATHTHEPOW=Função Potência
 MATHPOWDESCRIPTION=Função que retorna a base elevada ao expoente
 MATHPOWBASE=Base
+MATHPOWEXPONENT=Exponent
