--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -467,5 +467,12 @@
   "socialLoginDescription": "Function to login with social media(Facebook/Github|Google|Linkedin)",
   "clearCacheBeforeOpen": "Clean Login Data on Logoff",
   "classNameWithMethod": "Name of block function to be called",
-  "callbackFinish": "Function to be executed when execution is finished"
+  "callbackFinish": "Function to be executed when execution is finished",
+  "language": "Client Locale",
+  "languageDescription": "Function to returns client locale",
+  "share": "Share URL",
+  "shareDescription": "Function to call native share window from device or browser",
+  "shareParam0": "Title: Share title",
+  "shareParam1": "Text: Share text",
+  "shareParam2": "URL: Share URL. Ex: a url, video, file etc"
 }
