Correção de erro no merge

--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -472,7 +472,7 @@
   "newlineDescription": "Function that returns a newline '\\n'",
   "datasourceLoadName": "Load datasource",
   "datasourceLoadDescription": "Function that loads the selected datasource",
-  "stopExecutionAfterScopeDestroyLabel": "Stop execution after changing scope"
+  "stopExecutionAfterScopeDestroyLabel": "Stop execution after changing scope",
   "callbackFinish": "Function to be executed when execution is finished",
   "language": "Client Locale",
   "languageDescription": "Function to returns client locale",
