:ok_hand: Code review resolve.

--- a/src/main/java/cronapi/i18n/Messages_en_US.properties
+++ b/src/main/java/cronapi/i18n/Messages_en_US.properties
@@ -1192,7 +1192,7 @@ generateReportDescription=Function to generate report file in the desired folder
 report=Report
 path=Path
 uploadName=Upload
-uploadDescription=Functionthat upload files to server
+uploadDescription=Function that upload files to server
 uploadParam=Description: Upload window description
 uploadParam0=Filters: Allowed type files. Ex: image/*
 uploadParam1=Maximum size: File maximum size (bytes), defalut is 20MB. Example: 20MB
@@ -1298,7 +1298,7 @@ millisecond=Millisecond
 
 JSONToXML=Convert JSON to XML
 JSONToXMLDescription=Function that convert a xml string into JSON object
-JSONTOXMLValueToBeRead=Valor a ser lido: Texto ou Arquivo (Retorno da função "Abrir arquivo para leitura")
+JSONTOXMLValueToBeRead=Value to be read: Text or File (Return from the "Open file to read" function)
 
 MATHTHEPOW=Function Pow
 MATHPOWDESCRIPTION=A number representing the given base taken to the power of the given exponent.
