Funções de Formatar Data e Texto para Data com Fuso Horário

--- a/src/main/java/cronapi/i18n/Messages_en_US.properties
+++ b/src/main/java/cronapi/i18n/Messages_en_US.properties
@@ -368,11 +368,19 @@ totalLinesFile=Total lines file
 
 unZipFile=Unzip file
 
-convertStringToDate=Convert text to data
+convertStringToDate=Convert text to date
+
+convertStringToDateWithTimeZone=Convert text to date with Time Zone
 
 functionToConvertStringToDate=Function to convert text to data
 
 mask=Mask
+
+maskFormat=Mask: Mask. Ex: dd/MM/yyyy HH:mm:ss, DateTimeFormat, DateFormat
+
+timezone=Time Zone
+
+timezoneFormat=Time Zone: Time Zone. Ex: -3, GMT-03:00 or America/Sao_Paulo
 
 minSize=Minimum size
 
@@ -457,6 +465,8 @@ getDaysBetweenDates=Get days total between dates
 functionToGetDaysBetweenDates=Function to get total days between dates
 
 formatDateTime=Format date
+
+formatDateTimeWithTimeZone=Format date with timezone
 
 functionToFormatDateTime=Function to format date
 
