--- a/src/main/java/cronapi/i18n/Messages_pt_BR.properties
+++ b/src/main/java/cronapi/i18n/Messages_pt_BR.properties
@@ -376,9 +376,17 @@ unZipFile=Descompactar arquivo zip
 
 convertStringToDate=Converter texto para data
 
+convertStringToDateWithTimeZone=Converter texto para data com Fuso Horário
+
 functionToConvertStringToDate=Função para converter texto para data
 
 mask=Máscara
+
+maskFormat=Máscara: Máscara. Ex: dd/MM/yyyy HH:mm:ss, DateTimeFormat, DateFormat
+
+timezone=Fuso Horário
+
+timezoneFormat=Fuso Horário: Fuso Horário. Ex: -3, GMT-03:00 ou America/Sao_Paulo
 
 minSize=Tamanho mínimo
 
@@ -463,6 +471,8 @@ getDaysBetweenDates=Obter total de dias entre datas
 functionToGetDaysBetweenDates=Função para obter total de dias entre datas
 
 formatDateTime=Formatar data
+
+formatDateTimeWithTimeZone=Formatar data com Fuso Horário
 
 functionToFormatDateTime=Função para formatar data
 
