Nova função de logar informações/erros/avisos da aplicação

--- a/src/main/java/cronapi/i18n/Messages_en_US.properties
+++ b/src/main/java/cronapi/i18n/Messages_en_US.properties
@@ -1318,3 +1318,16 @@ newline=Newline
 newlineDescription=Function that returns a newline '\\n'
 attribute=Attribute
 value=Value
+log=Log
+logDescription=Logs application messages according to configuration. By default, logs into console output.
+logCategory=Category: Reference key of this log message. This is usually the name of the block.
+logLevel=Log Level: This is the log level that will be logged. If it is below the settings, the system will not log in.
+INFO=Info
+FINE=Fine
+FINER=Finer
+FINEST=Finest
+SEVERE=Severe
+WARNING=Warning
+CONFIG=Config
+logMessage=Log Message: Text You Want to Log.
+logDetail=Log Detail: Can be a text or an exception object (error).
