--- a/src/main/java/cronapi/i18n/Messages_pt_BR.properties
+++ b/src/main/java/cronapi/i18n/Messages_pt_BR.properties
@@ -1309,3 +1309,16 @@ newline=Nova linha
 newlineDescription=Função que retorna uma nova linha '\\n'
 attribute=Atributo
 value=Valor
+log=Logar
+logDescription=Loga mensagens da aplicação de acordo com a configuração. Por padrão, loga-se na saída do console.
+logCategory=Categoria: Chave de referêncioa dessa mensagem de log. Normalmente é o nome do bloco.
+logLevel=Nível de Log: É o nível de log que será logado. Se estiver abaixo do determinado nas configurações, o sistema não vai logar.
+INFO=Informação
+FINE=Refinado Baixo
+FINER=Refinado Médio
+FINEST=Refinado Alto
+SEVERE=Erro
+WARNING=Aviso
+CONFIG=Configuração
+logMessage=Mensagem de log: Texto que deseja logar.
+logDetail=Detalhe de log: Pode ser um texto ou um objeto de exceção (erro).
