--- a/src/main/java/cronapi/i18n/Messages_pt_BR.properties
+++ b/src/main/java/cronapi/i18n/Messages_pt_BR.properties
@@ -1311,7 +1311,7 @@ attribute=Atributo
 value=Valor
 log=Logar
 logDescription=Loga mensagens da aplicação de acordo com a configuração. Por padrão, loga-se na saída do console.
-logCategory=Categoria: Chave de referêncioa dessa mensagem de log. Normalmente é o nome do bloco.
+logCategory=Categoria: Chave de referência dessa mensagem de log. Normalmente é o nome do bloco.
 logLevel=Nível de Log: É o nível de log que será logado. Se estiver abaixo do determinado nas configurações, o sistema não vai logar.
 INFO=Informação
 FINE=Refinado Baixo
