--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -126,6 +126,7 @@
   "quantityRecordsDescription": "Função que retorna a quantidade total de registros da Fonte de dados",
   "quantityRecordsParam0": "Fonte de dados",
   "datasourcePostName": "Enviar",
+  "datasourcePostParam0": "Fonte de dados",
   "datasourcePostDescription": "Função que chama o método enviar da fonte de dados",
   "Fonte de dadosPostParam0": "Fonte de dados",
   "datasourceFilterName": "Filtrar",
@@ -479,5 +480,10 @@
   "shareDescription": "Função que chama a tela nativa de compartilhamento do dispositivo ou navegador",
   "shareParam0": "Título: Título do compartilhamento",
   "shareParam1": "Texto: Texto que explica o compartilhamento",
-  "shareParam2": "URL: Link a ser compartilhado. Ex: uma url, vídeo, arquivo etc"
+  "shareParam2": "URL: Link a ser compartilhado. Ex: uma url, vídeo, arquivo etc",
+  "replaceName": "Função de substituir",
+  "replaceDescription": "Função que retorna uma nova string substituído o texto passado.",
+  "textReplaceElement": "Texto original",
+  "textReplaceTargetRegexElement": "Um objeto RegExp ou literal. A correspondência ou correspondências são substituídas por newSubStr ou o valor retornado pela função especificada.",
+  "textReplaceReplacementElement": "Novo texto"
 }
