Nova função "Converter"

--- a/src/main/java/cronapi/i18n/Messages_en_US.properties
+++ b/src/main/java/cronapi/i18n/Messages_en_US.properties
@@ -1331,3 +1331,20 @@ WARNING=Warning
 CONFIG=Config
 logMessage=Log Message: Text You Want to Log.
 logDetail=Log Detail: Can be a text or an exception object (error).
+STRING=String
+BOOLEAN=Boolean
+LONG=Long
+INTEGER=Integer
+DOUBLE=Numéric
+DATETIME=Date and Time
+TIME=Time
+TEXTTIME=Text Time
+DATE=Date
+ISODATE=ISO date
+MAP=Map
+JSON=Json
+LIST=Lista
+BYTEARRAY=Bytes
+convert=Convert
+convertValue=value
+convertTo=to
