--- a/src/main/java/cronapi/i18n/Messages_pt_BR.properties
+++ b/src/main/java/cronapi/i18n/Messages_pt_BR.properties
@@ -1322,3 +1322,21 @@ WARNING=Aviso
 CONFIG=Configuração
 logMessage=Mensagem de log: Texto que deseja logar.
 logDetail=Detalhe de log: Pode ser um texto ou um objeto de exceção (erro).
+STRING=String
+BOOLEAN=Lógico
+LONG=Inteiro Longo
+INTEGER=Inteiro
+DOUBLE=Numérico
+DATETIME=Date e Hora
+TIME=Hora
+TEXTTIME=Hora Textual
+DATE=Data
+ISODATE=Data em ISO
+MAP=Mapa
+JSON=Json
+LIST=Lista
+BYTEARRAY=Bytes
+convert=Converter
+convertValue=valor
+convertTo=para
+
