Nova função "Converter" (descrição)

--- a/src/main/java/cronapi/i18n/Messages_pt_BR.properties
+++ b/src/main/java/cronapi/i18n/Messages_pt_BR.properties
@@ -1339,4 +1339,5 @@ BYTEARRAY=Bytes
 convert=Converter
 convertValue=valor
 convertTo=para
+convertDescription=Converte valores entre diferentes tipos
 
