--- a/src/main/java/cronapi/i18n/Messages_en_US.properties
+++ b/src/main/java/cronapi/i18n/Messages_en_US.properties
@@ -980,7 +980,6 @@ CategoryType.XML=XML
 CategoryType.EMAIL=Email
 CategoryType.FTP=FTP
 CategoryType.JSON=Json
-CategoryType.OTHER=Other
 CategoryType.LOGIC=Logic
 CategoryType.TEXT=Text
 CategoryType.LIST=Lists
@@ -997,7 +996,6 @@ CategoryType.TREE=Tree
 CategoryType.JSONORMAP=Json and Map
 CategoryType.SCREEN=Form
 CategoryType.OBJECT=Object
-datasourceExecuteQuery=Execute Query JPQL
 functionToExecuteQuery=Function excute query JPQL 
 DATASOURCE_INVALID_QUERY=JPQL instruction was invalid: {0}
 accessDenied=Access Denied
@@ -1095,9 +1093,7 @@ listFilesName= Get file list
 listFilesDescription= Function that list files from a path
 listFilesParam0= File path: File path to list files. Example: /MyFolder/MyFile.txt or /MyFolder/
 listFilesParam1= Type: Type to list files. All: List files and directories. Directory: List only the directories. Files: List only files, without directories.
-fileSeparatorName=Separador de arquivos
-fileSeparatorDescription=Função que retorna um separador de arquivos. Exemplo ('/')
-folderName=Folder name: Example: MyFolder
+filderName=Folder name: Example: MyFolder
 fileSeparatorName=File separator
 fileSeparatorDescription=Function that return a file separator according to operation system. Example: '/'
 all=All
@@ -1263,7 +1259,6 @@ createChartId=Id: Chart id (canvas)
 createChartType=Chart type: Chart type to be created
 createChartSeries=Chart serie(s): Set of chart series
 createChartLegends=Legends: Chart legends
-CategoryType.CHART=Chart
 polarArea=Polar Area
 firebaseRegister= Register token(s) on topic
 firebaseRegisterDescription=Function that register a token(ns) on topic. Could receive a single token or a list of tokens.
@@ -1331,3 +1326,13 @@ WARNING=Warning
 CONFIG=Config
 logMessage=Log Message: Text You Want to Log.
 logDetail=Log Detail: Can be a text or an exception object (error).
+textReplaceFunction=Function Replace
+textReplaceDescription=Function that returns a new string replaced the past text.
+textReplace=Original text
+textReplaceTarget=Text to be replaced
+textReplaceReplacement=New Text
+textReplaceAllFunction=Function replace all
+textReplaceAllDescription=Function that returns a new string overwriting all past texts.
+textReplaceRegex=A RegExp or literal object. The match or matches are replaced with newSubStr or the value returned by the specified function.
+textReplaceFirstFunction=Function replace First
+textReplaceFirstDescription=Function that replaces an initial occurrence you find.
