[QAIBT-2089]:sparkles: Adjusting the translations

--- a/src/main/java/cronapi/i18n/Messages_en_US.properties
+++ b/src/main/java/cronapi/i18n/Messages_en_US.properties
@@ -1093,7 +1093,7 @@ listFilesName= Get file list
 listFilesDescription= Function that list files from a path
 listFilesParam0= File path: File path to list files. Example: /MyFolder/MyFile.txt or /MyFolder/
 listFilesParam1= Type: Type to list files. All: List files and directories. Directory: List only the directories. Files: List only files, without directories.
-filderName=Folder name: Example: MyFolder
+folderName=Folder name: Example: MyFolder
 fileSeparatorName=File separator
 fileSeparatorDescription=Function that return a file separator according to operation system. Example: '/'
 all=All
