[QAIBT-2089]:books: Ajuste das traduções

--- a/src/main/java/cronapi/i18n/Messages_en_US.properties
+++ b/src/main/java/cronapi/i18n/Messages_en_US.properties
@@ -1326,13 +1326,13 @@ WARNING=Warning
 CONFIG=Config
 logMessage=Log Message: Text You Want to Log.
 logDetail=Log Detail: Can be a text or an exception object (error).
-textReplaceFunction=Function Replace
-textReplaceDescription=Function that returns a new string replaced the past text.
+textReplaceFunction=Replace
+textReplaceDescription=Replaced the past text
 textReplace=Original text
 textReplaceTarget=Text to be replaced
 textReplaceReplacement=New Text
-textReplaceAllFunction=Function replace all
-textReplaceAllDescription=Function that returns a new string overwriting all past texts.
-textReplaceRegex=A RegExp or literal object. The match or matches are replaced with newSubStr or the value returned by the specified function.
-textReplaceFirstFunction=Function replace First
-textReplaceFirstDescription=Function that replaces an initial occurrence you find.
+textReplaceAllFunction=Replace all
+textReplaceAllDescription=Overwriting all past texts
+textReplaceRegex=A RegExp or Text
+textReplaceFirstFunction=Replace First
+textReplaceFirstDescription=Replaces an initial occurrence you find
