--- a/src/main/java/cronapi/i18n/Messages_pt_BR.properties
+++ b/src/main/java/cronapi/i18n/Messages_pt_BR.properties
@@ -1321,13 +1321,13 @@ WARNING=Aviso
 CONFIG=Configuração
 logMessage=Mensagem de log: Texto que deseja logar.
 logDetail=Detalhe de log: Pode ser um texto ou um objeto de exceção (erro).
-textReplaceFunction=Função de substituir
-textReplaceDescription=Função que retorna uma nova string substituído o texto passado.
+textReplaceFunction=Substituir
+textReplaceDescription=Uma nova string substituído o texto passado
 textReplace=Texto original
 textReplaceTarget=Texto a ser substituido
 textReplaceReplacement=Novo texto
-textReplaceAllFunction=Função de substituir todos
-textReplaceAllDescription=Função que retorna uma nova string substituído todos os textos passado.
-textReplaceRegex=Um objeto RegExp ou literal. A correspondência ou correspondências são substituídas por newSubStr ou o valor retornado pela função especificada.
-textReplaceFirstFunction=Função de substituir o primeira ocorrência.
-textReplaceFirstDescription=Função que substituit a primera ocorrência que encontrar.
+textReplaceAllFunction=Substituir todos
+textReplaceAllDescription=Uma nova string substituído o texto passado
+textReplaceRegex=Texto ou RegEx a ser substituido
+textReplaceFirstFunction=Substituir o primeira ocorrência
+textReplaceFirstDescription=Substituir a primera ocorrência que encontrar
